--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,12 @@ body {
 section {
     margin-top: 180px;
 }
+@media (max-width: 1045px) {
+    section {
+        margin-top: 100px;
+    }
+}
+
 
 h1 {
     font-size: 96px;
@@ -72,7 +78,6 @@ p {
         margin-left: 50px;
     }
 }
-
 @media (max-width: 1045px) {
     h1 {
         font-size: 50px;
@@ -87,10 +92,8 @@ p {
     h3 {
         font-size: 18px;
         font-weight: 400;
-        margin-left: 50px;
     }
 }
-
 @media (max-width: 500px) {
     h1 {
         font-size: 40px;
@@ -104,14 +107,6 @@ p {
     }
     h3 {
         font-size: 16px;
-        font-weight: 400;
-    }
-    h4 {
-        font-size: 13px;
-        font-weight: 400;
-    }
-    p {
-        font-size: 13px;
         font-weight: 400;
     }
 }
@@ -1070,8 +1065,6 @@ p {
     color: white;
 }
 
-
-
 /*---------------------Solution Dev--------------*/
 
 /*---------------------Quality description--------------*/
@@ -1109,20 +1102,18 @@ p {
     border-radius: 50px;
 }
 
-@media (max-width: 978px) {
+@media (max-width: 1050px) {
     .quality-row {
         margin-right: 0px;
+        aspect-ratio: 1/1;
     }
-
     .quality-row-text {
         gap: 0px;
-
     }
 }
-
-@media (max-width: 810px) {
+@media (max-width: 890px) {
     .quality-row {
-aspect-ratio: 1/1;
+        aspect-ratio: 1/1;
     }
 }
 /*---------------------Quality description--------------*/
@@ -1189,83 +1180,74 @@ aspect-ratio: 1/1;
     .job-description {
         padding: 40px 20px;
     }
-
     .job-description__title {
 
         margin-bottom: 35px;
     }
-
     .job-description__subtitle {
 
         margin-bottom: 30px;
     }
-
-
     .sublist_number h3 {
-
         margin: 12px 0;
     }
-
 }
 
-@media (max-width: 1168px) {}
-
-
-@media (max-width: 768px) {
-
-
-    /* Убираем <br> в тексте на планшетах */
+@media (max-width: 1168px) {
     .job-description__title br,
     .sublist_number h3 br {
         display: none;
     }
-
+    .job-description-image {
+         position: relative;
+        right: 0;
+        margin-bottom: 50px;
+        margin-left: 170px;
+    }
+}
+@media (max-width: 768px) {
+    .job-description__title br,
+    .sublist_number h3 br {
+        display: none;
+    }
     .job-description-image {
         position: relative;
         margin-left: 85px;
         margin-bottom: 50px;
     }
+    .job-description{
+        margin-top: 30px;
+    }
 }
 
-/* Мобильная версия (576px и меньше) */
 @media (max-width: 576px) {
-    /* Мобильная версия (576px и меньше) */
-
     .job-description__container {
         display: flex;
         flex-direction: column;
         gap: 600px;
-        /* Четкие фиксированные отступы */
     }
-
     .job-description-image {
         position: absolute;
         order: 1;
         width: 100%;
         max-width: 100%;
         height: auto;
-        margin: 30px 0 0 0;
         padding: 0;
         align-self: center;
-
     }
-
     .job-description__title,
     .job-description__subtitle,
     .job-description-content-text {
         order: 0;
         width: 100%;
-        padding: 0;
-        margin: 0;
+        padding-bottom: 8px;
     }
-
     .job-description__wrapper {
         padding: 20px 15px;
     }
-
-
-
-
+    .job-description__title{
+        padding-top: 30px;
+    }
 }
 
 /*---------------------Job description--------------*/
@@ -1291,6 +1273,7 @@ aspect-ratio: 1/1;
 
 .fin-operation__subtitle {
     margin-bottom: 130px;
+    font-size: 24px;
 }
 
 .operation-links {
@@ -1300,16 +1283,39 @@ aspect-ratio: 1/1;
 
 .operation__link {
     padding-bottom: 10px;
-    line-height: 1.5
+    line-height: 1.5;font-size: 24px;
 }
 
+@media (max-width: 1300px){
+    .fin-operation__subtitle {
+        margin-left: 50px;
+    }
+}
 @media (max-width: 1030px) {
     .operation-links {
         padding-left: 2px;
     }
-
     .fin-operation__title {
         margin-left: 10px;
+    }
+    .operation__link,.fin-operation__subtitle{
+        font-size: 18px;
+    }
+}
+@media (max-width: 780px) {
+    .fin-operation__subtitle{
+        margin-left: 10px;
+    }
+    .operation-links{
+        margin-left: 10px;
+    }
+    .operation__link,.fin-operation__subtitle{
+        font-size: 16px;
+    }
+}
+@media (max-width: 480px) {
+    .fin-operation{
+        height: 1210px;
     }
 }
 
@@ -1403,8 +1409,6 @@ aspect-ratio: 1/1;
     height: 495px;
 }
 
-
-
 .logic_image {
     width: auto;
     height: auto;
@@ -1476,7 +1480,83 @@ aspect-ratio: 1/1;
     padding-bottom: 30px;
 }
 
-@media (max-width: 1124px) {}
+@media (max-width: 1045px) {
+    .portfolio__title {
+        margin-bottom: 40px;
+        font-size: 2rem;
+    }
+    .portfolio-cards {
+        gap: 30px;
+        padding: 0 15px;
+    }
+    .portfolio-card2 {
+        padding: 25px;
+    }
+    .director-img{
+        width: 300px;
+        height: 430px;
+    }
+    .portfolio-content-text {
+        padding-bottom: 20px;
+    }
+}
+@media (max-width: 868px) {
+    .portfolio__title {
+        margin-bottom: 30px;
+        font-size: 1.8rem;
+    }
+    .portfolio-cards {
+        grid-template-columns: 1fr; 
+        gap: 25px;
+        max-width: 600px;
+    }
+    .portfolio-card1,
+    .portfolio-card2 {
+        grid-column: 1; 
+        grid-row: auto;
+    }
+    .portfolio-card2 {
+        padding: 20px;
+    }
+
+    .portfolio-content-text {
+        padding-bottom: 20px;
+    }
+    .director-img{
+        width: 100%;
+        height: 100%;
+
+    }
+}
+
+@media (max-width: 600px) {
+    .portfolio__title {
+        margin-bottom: 25px;
+        font-size: 1.5rem;
+    }
+    .portfolio-cards {
+        gap: 20px;
+        padding: 0 10px;
+    }
+    .portfolio-card {
+        border-radius: 15px;
+    }
+    .portfolio-card2 {
+        padding: 15px;
+    }
+    .portfolio-content-text {
+        padding-bottom: 15px;
+    }
+}
+
+@media (max-width: 400px) {
+    .portfolio__title {
+        font-size: 1.3rem;
+    }
+    .portfolio-card2 {
+        padding: 10px;
+    }
+}
 
 /*---------------------Quality description--------------*/
 
@@ -1502,16 +1582,21 @@ aspect-ratio: 1/1;
 }
 
 @media (max-width: 1124px) {
-
     .advantages {
         padding: 30px;
     }
 }
 
-@media (max-width: 1000px) {
-
+@media (max-width: 1050px) {
     .advantages {
         padding: 30px;
+    }
+    .choose__item{
+        margin-right: 45px;
+    }
+    .col-lg-6 {
+        flex: 0 0 auto;
+        width: 25%;
     }
 }
 
@@ -1625,13 +1710,143 @@ aspect-ratio: 1/1;
     padding: 15px 35px;
     border: #000000 solid 1px;
     border-radius: 60px;
-    width: 100%;
     max-width: 300px;
     text-align: center;
 }
 
 .process-text {
     line-height: normal;
+}
+
+/* adaptation */
+@media (max-width: 1600px) {
+    .process-roadmap-botton {
+        padding-top: 300px;
+        margin-left: 200px;
+    }    
+}
+@media (max-width: 1500px) {
+    .workPlan__container {
+        margin: 0 50px;
+    }    
+}
+@media (max-width: 1440px) {
+    .process-roadmap-top {
+        margin-left: 150px;
+    }    
+}
+@media (max-width: 1300px) {
+   .process-text {
+    margin-left: 0;
+   } 
+   .workPlan__title {
+    margin-left: 0;
+   }
+}
+@media (max-width: 1230px) {
+    .process-roadmap-botton {
+        margin-left: 250px;
+    }   
+ }
+ @media (max-width: 1170px) {
+    .process-roadmap-botton {
+        margin-left: 200px;
+        padding-top: 350px;
+    }   
+    .process-roadmap-top {
+        margin-left: 0;
+    }
+ }
+@media (max-width: 1045px) {
+    .workPlan {
+        background-size: contain;
+    }
+    .step-content {
+        padding: 15px 20px 10px;
+        max-width: 167px;
+    }
+    .process-text {
+        font-size: 16px;
+    }
+    .process-roadmap-botton {
+        margin-left: 0;
+        padding-top: 130px;
+    }
+    .workPlan__container {
+        margin: 0;
+    }
+    .workPlan__title {
+        margin-bottom: 30px;
+    }
+}
+@media (max-width: 960px) {
+    .workPlan__title {
+        margin-bottom: 25px;
+    }
+    .process-roadmap-botton {
+        padding-top: 160px;
+    }
+    .workPlan {
+        background-image: url(../lib/roadCar-middle.svg);
+        background-size: contain;
+    }
+}
+@media (max-width: 860PX) {
+    .process-roadmap-botton {
+        padding-top: 120px;
+    }
+}
+@media (max-width: 770px) {
+    .workPlan {
+        background-image: url(../lib/roadCar-small.svg);
+        background-size: auto;
+        background-position-x: right;
+        height: 464px;
+    }
+    .process-roadmap-top,
+    .process-roadmap-botton {
+        display: contents;
+    }
+    .workPlan__container {
+        display: flex;
+        flex-direction: column;
+        row-gap: 20px; 
+    }
+    .process1 { order: 1; }
+    .process2 { order: 2; }
+    .process3 { order: 3; }
+    .process4 { order: 4; }
+    .process5 { order: 5; }
+    .process6 { order: 6; }
+    .process7 { order: 7; }
+    
+    .step-content {
+        padding: 15px 20px 10px;
+        max-width: none;
+    }
+    br {
+        display: none;
+    }
+    .step-number {
+        font-size: 14px;
+        flex-shrink: 0;
+        position: absolute;
+        z-index: 2;
+        margin-bottom: 50px;
+        margin-left: -5px;
+    }
+    .process-text {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 500px) {
+    .workPlan__container {
+        margin: 0 0;
+    }
+    .process-item {
+        margin-left: 15px;
+    }
 }
 
 /* ----------- How we work Section ------------ */
@@ -1642,7 +1857,7 @@ aspect-ratio: 1/1;
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    height: 1050px;
+    height: 1150px;
     margin-top: 100px;
 }
 
@@ -1702,6 +1917,7 @@ aspect-ratio: 1/1;
     grid-template-columns: 1fr 3fr;
     gap: 20px;
     margin-bottom: 20px;
+    align-items: center;
 }
 
 .form-group input {
@@ -1867,21 +2083,110 @@ aspect-ratio: 1/1;
 }
 
 @keyframes shake {
-
     0%,
     100% {
         transform: translateX(0);
     }
-
     25% {
         transform: translateX(5px);
     }
-
     75% {
         transform: translateX(-5px);
     }
 }
 
+/* adaptation */
+@media (max-width: 1300px) {
+    .messengers {
+        margin: 0 50px;
+    }
+    .form-group label {
+        font-size: 16px;
+    }
+    .contact-form {
+        margin-right: 50px;
+    }
+    .form__subtitle {
+        width: 370px;
+    }
+    .form {
+        margin-bottom: 100px;
+    }
+    
+}
+@media (max-width: 1045px) {
+    .form {
+        background-image: url(../lib/waveCurve-middle.svg);
+        height: 719px;
+    }
+    .form__subtitle {
+        width: 320px;
+        margin-left: 0;
+    }
+    .form__title {
+        margin-left: 0;
+    }
+    .contacts__title {
+        margin-left: 0;
+    }
+    .messengers {
+        margin: 0 0;
+    }
+    .submit-btn {
+        height: 40px;
+        padding: 5px 10px;
+    }
+    .contact-form {
+        margin-right: 0;
+    }
+    .form-row {
+        gap: 10px;
+    }
+    .form__content {
+        padding-top: 100px;
+    }
+    .form-group {
+        margin-bottom: 10px;
+    }
+    .messenger-item img {
+        width: 40px;
+        height: 40px;
+    }
+}
+@media (max-width: 770px) {
+    .form__container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 25px;
+        align-items: start;
+        color: white;
+    }
+    .form {
+        background-image: url(../lib/waveCurve-small.svg);
+        height: 1400px;
+    }
+    .form__content {
+        padding-top: 200px;
+        margin: 0 50px;
+    }
+    .form__title {
+        font-size: 40px;
+        margin-bottom: 20px;
+    }
+    .form__subtitle{
+        width: auto;
+        font-size: 17px;
+    }
+    .form-group {
+        margin-bottom: 15px;
+    }
+}
+@media (max-width: 500px) {
+    .form__content {
+        padding-top: 200px;
+        margin: 0 0;
+    }
+}
 /* ----------- Form Section ------------ */
 
 /* ----------- Partners Section ------------ */
@@ -1927,21 +2232,27 @@ aspect-ratio: 1/1;
     0% {
         transform: translateX(0);
     }
-
     100% {
         transform: translateX(-50%);
     }
 }
 
-@media (max-width: 768px) {
-    .partner-card {
-        width: 160px;
-        height: 100px;
-        margin: 0 20px;
+/* adaptation */
+@media (max-width: 1300px) {
+    .partners__title {
+        margin-left: 0;
     }
-
+    .partners {
+        margin: 0 50px;
+    }
+}
+@media (max-width: 769px) {
     .partner-card img {
-        max-width: 120px;
+        width: auto;
+        height: 70px;
+    }
+    .partners__title {
+        margin-bottom: 20px;
     }
 }
 
@@ -1995,7 +2306,7 @@ aspect-ratio: 1/1;
 .question__accordion__question--active::after {
     transform: rotate(180deg);
     transition: transform 0.3s ease;
-    margin-top: 30px;    
+    margin-top: 10px;    
 }
 
 .question__accordion__answer--visible {
@@ -2008,36 +2319,33 @@ aspect-ratio: 1/1;
     .question__title {
         margin-left: 0;
     }
+    .question__accordion__answer h3 {
+        margin-left: 0;
+    }
+    .question {
+        margin: 0 50px 150px;
+    }
 }
 @media (max-width: 1045px) {
-    .hero__content {
-        max-width: 754px;
+    .question__accordion__item {
+        margin: 0 0 20px;
     }
-    .navbar__links{
-        display: none;
+    .question__title {
+        margin-left: 0;
     }
-    .navbar__right{
-        position: absolute;
-        right: 0;
-        margin-right: 60px;
-    }   
-    .menu__burger {
-        display: block;
-    }
-    .navbar__logo-image{
-        width: 110px;
-    }
-    .burger-header {
-        display: block;
+    .question {
+        margin: 0 0 200px;
     }
 }
-
-
+@media (max-width: 700px) {
+    .question {
+        margin: 0 10px 150px;
+    }
+}
 
 /*---------------Questions--------------------*/
 
 /* ----------------- Footer --------------------- */
-/* Основные стили футера */
 footer {
     background-color: #4B4B4B;
     color: #FFFFFF;
@@ -2191,10 +2499,13 @@ footer {
     .consult-button {
         font-size: 16px;
     }
-}
-@media (max-width: 1125px) {
-    .messengers-block {
-        display: none;
+    .footer-actions {
+        gap: 10px;
+    }
+    .messenger-link img{
+        width: 42px;
+        height: 42px;
+        gap: 10px;
     }
 }
 @media (max-width: 1045px) {
@@ -2220,9 +2531,6 @@ footer {
     }
     .consult-button {
         padding: 15px 25px;
-    }
-    .footer-actions {
-        gap: 10px;
     }
 }
 @media (max-width: 910px) {
@@ -2260,7 +2568,7 @@ footer {
         margin: 0 10px;
     }
 }
-@media (max-width: 601px) {
+@media (max-width: 630px) {
     .footer-img {
         margin-top: 0;
         min-width: 362px;
