--- a/css/style.css
+++ b/css/style.css
@@ -1268,13 +1268,10 @@ p {
         gap: 600px;
     }
     .job-description-image {
-        position: absolute;
-        order: 1;
-        width: 100%;
-        max-width: 100%;
-        height: auto;
-        padding: 0;
-        align-self: center;
+        display: none;
+    }
+    .job-description__subtitle{
+        background-image: url("../lib/job_description.png");
     }
     .job-description__title,
     .job-description__subtitle,
@@ -1341,6 +1338,7 @@ p {
     }
     .operation__link,.fin-operation__subtitle{
         font-size: 18px;
+        margin-left: 3px;
     }
 }
 @media (max-width: 780px) {
@@ -1476,7 +1474,96 @@ p {
     margin-top: 10px;
     list-style-type: disc;
 }
+@media (max-width: 1300px) {
+    .logistics__title {
+        margin-bottom: 40px;
+        font-size: 1.8rem;
+    }
+    .logistics__subtitle {
+        margin-bottom: 40px;
+        font-size: 1.2rem;
+    }
+    .logic-cards {
+        gap: 20px;
+        padding: 0 15px;
+    }
+    .logic-content-text {
+        padding: 20px;
+    }
+    .sublist {
+        padding-left: 20px;
+    }
+}
+@media (max-width: 768px) {
+    .logistics__title {
+        margin-bottom: 30px;
+        font-size: 1.5rem;
+    }
+    .logistics__subtitle {
+        margin-bottom: 30px;
 
+    }
+    .logic-cards {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        gap: 15px;
+        padding: 0 10px;
+    }
+    .logic-card1,
+    .logic-card2,
+    .logic-card3,
+    .logic-card4,
+    .logic-card5 {
+        grid-column: 1;
+        grid-row: auto;
+        height: auto; 
+    }
+    .logic-card1 img,
+    .logic-card5 img {
+        height: auto;
+        max-height: 300px;
+        width: 100%;
+    }
+    .logic-card3 {
+        height: auto;
+    }
+    .logic_image {
+        width: 100%;
+        height: auto;
+        max-height: 250px;
+        object-fit: cover;
+    }
+    .logic-content-text {
+        padding: 15px;
+    }
+    .logistics-delivery-text {
+        margin-bottom: 15px;
+    }
+    .sublist {
+        padding-left: 15px;
+    }
+    .logic-content-row {
+        flex-direction: column;
+    }
+}
+@media (max-width: 480px) {
+    .logistics__title {
+        margin-bottom: 20px;
+    }
+    .logic-cards {
+        gap: 10px;
+    }
+
+    .logic-card {
+        border-radius: 26px;
+    }
+    .logic_image {
+        max-height: 200px;
+    }
+    .logic-content-text {
+        padding: 10px;
+    }
+}
 
 /*---------------------Logistics--------------*/
 
@@ -1521,13 +1608,28 @@ p {
     padding-bottom: 30px;
 }
 
-@media (max-width: 1045px) {
+@media (max-width: 1300px) {
     .portfolio__title {
-        margin-bottom: 40px;
-        font-size: 2rem;
+        margin-left: 0;
     }
     .portfolio-cards {
         gap: 30px;
+        padding: 0;
+    }
+    .portfolio-content-text {
+        margin-left: 0;
+    }
+    .portfolio__container {
+        margin: 0 50px;
+    }
+}
+@media (max-width: 1045px) {
+    .portfolio__title {
+        margin-bottom: 20px;
+        padding: 0 15px;
+    }
+    .portfolio-cards {
+        gap: 20px;
         padding: 0 15px;
     }
     .portfolio-card2 {
@@ -1539,6 +1641,9 @@ p {
     }
     .portfolio-content-text {
         padding-bottom: 20px;
+    }
+    .portfolio__container {
+        margin: 0;
     }
 }
 @media (max-width: 868px) {
@@ -1617,9 +1722,10 @@ p {
 }
 
 .choose__item-title1 {
-    margin-top: 30px;
-    margin-bottom: 25px;
+    margin-top: 9px;
+    margin-bottom: 19px;
     font-weight: bold;
+    margin-left: 3px;
 }
 
 @media (max-width: 1124px) {
@@ -1627,7 +1733,6 @@ p {
         padding: 30px;
     }
 }
-
 @media (max-width: 1050px) {
     .advantages {
         padding: 30px;
@@ -1636,21 +1741,23 @@ p {
         margin-right: 45px;
     }
     .col-lg-6 {
-        flex: 0 0 auto;
-        width: 25%;
+        flex: 1 0 auto;
+        width: 40%;
     }
 }
-
 @media (max-width: 870px) {
-
     .advantages {
         padding: 30px;
     }
-
     .choose__item {
         flex-direction: row;
         gap: 17px;
         align-items: flex-start;
+    }
+}
+@media (max-width: 650px){
+    .col-lg-3 {    
+      width: 52%;
     }
 }
 
@@ -2153,7 +2260,6 @@ p {
     .form {
         margin-bottom: 100px;
     }
-    
 }
 @media (max-width: 1045px) {
     .form {
@@ -2217,9 +2323,13 @@ p {
     .form__subtitle{
         width: auto;
         font-size: 17px;
+        margin-bottom: 30px;
     }
     .form-group {
         margin-bottom: 15px;
+    }
+    .block-m{
+        display: none;
     }
 }
 @media (max-width: 500px) {
@@ -2379,7 +2489,7 @@ p {
     }
 }
 @media (max-width: 770px) {
-    .question__accordion__item {
+    #questions {
         border-radius: 20px;
     }
 }
