--- a/css/style.css
+++ b/css/style.css
@@ -1722,10 +1722,11 @@ p {
 }
 
 .choose__item-title1 {
-    margin-top: 9px;
+    margin-top:33px;
     margin-bottom: 19px;
     font-weight: bold;
     margin-left: 3px;
+
 }
 
 @media (max-width: 1124px) {
@@ -1733,6 +1734,7 @@ p {
         padding: 30px;
     }
 }
+
 @media (max-width: 1050px) {
     .advantages {
         padding: 30px;
@@ -1740,15 +1742,28 @@ p {
     .choose__item{
         margin-right: 45px;
     }
-    .col-lg-6 {
+    .col-lg-3 {
         flex: 1 0 auto;
         width: 40%;
+    
     }
+    .choose__item-title1 {
+        margin-top:9px;
+        margin-bottom: 19px;
+        font-weight: bold;
+        margin-left: 3px;
+    
+    }
+    
+ 
 }
+
 @media (max-width: 870px) {
+
     .advantages {
         padding: 30px;
     }
+
     .choose__item {
         flex-direction: row;
         gap: 17px;
@@ -1756,9 +1771,11 @@ p {
     }
 }
 @media (max-width: 650px){
-    .col-lg-3 {    
-      width: 52%;
-    }
+.col-lg-3 {
+  
+  width: 52%;
+
+}
 }
 
 /*---------------------Why choose--------------*/
@@ -2505,44 +2522,56 @@ p {
 footer {
     background-color: #4B4B4B;
     color: #FFFFFF;
-    padding: 30px 0;
+    padding: 50px 0;
 }
 
 .footer__container {
-    display: flex;
-    gap: 60px;
-    max-width: 1630px;
+    max-width: 1200px;
     margin: 0 auto;
+    /* padding: 0 20px; */
 }
 
+.footer-content {
+    display: flex;
+    gap: 60px;
+}
+
+
+/* Правый блок контента */
 .footer-right {
     flex: 1;
     display: flex;
     flex-direction: column;
 }
 
+/* Навигационное меню */
 .footer-nav {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-between;
     gap: 25px;
-    margin-top: 40px;
+    margin-bottom: 40px;
+    font-weight: 300 !important ; 
+    font-size: 23px !important;
 }
 
 .footer-link {
     color: #FFFFFF;
+    text-decoration: none;
+    font-size: 18px;
     transition: color 0.3s;
 }
-.footer-link:hover,
-.footer-link:focus {
+
+.footer-link:hover {
     color: #CCCCCC;
 }
 
+/* Блок контактов */
 .footer-contacts {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 70px;
-    margin-top: 100px;
+    margin-bottom: 40px;
+    margin-top: 50px;
 }
 
 .contacts-info {
@@ -2554,192 +2583,313 @@ footer {
 .contact-item {
     display: flex;
     align-items: center;
-    gap: 15px;
+    margin-left: 10px;
+}
+.contact-type{
+    margin-top: 10px;
 }
 
+
+/* Блок мессенджеров */
+
+
 .messengers-caption {
+    display: block;
+    font-size: 18px;
     margin-bottom: 15px;
 }
 
 .messengers-list {
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     gap: 15px;
 }
 
 .messenger-link img {
+    width: 50px;
+    height: 50px;
     transition: transform 0.3s;
 }
-.messenger-link img:hover,
-.messenger-link img:focus {
+
+.messenger-link img:hover {
     transform: scale(1.1);
 }
 
+/* Нижний блок с кнопкой */
 .footer-actions {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
     margin-top: 60px;
+}
+
+.consult-button {
+    background-color: #1C4C5E;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 30px;
+    padding: 15px 30px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.consult-button:hover {
+    background-color: #0F3545;
 }
 
 .privacy-policy {
     color: rgba(255, 255, 255, 0.8);
     text-decoration: none;
     font-size: 14px;
-    transition: all 0.3s ease-in-out;
+    transition: color 0.3s;
+}
+
+.privacy-policy:hover {
+    color: #FFFFFF;
     text-decoration: underline;
 }
-.privacy-policy:hover,
-.privacy-policy:focus {
-    color: #FFFFFF;
-    text-decoration: none;
-}
-
-.consult-button {
-    background-color: #295D70;
-    color: white;
-    cursor: pointer;
-    border-radius: 40px;
-    padding: 25px 35px;
-    font-size: 22px;
-    font-weight: 100;
-    border: none;
-    transition: all 0.3s ease-in-out;
-}
-.consult-button:hover,
-.consult-button:focus {
-    background-color: #0F3545;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.295);
-}
-
 
 /* Адаптивность */
 @media (max-width: 1300px) {
     .footer__container {
-        margin: 0 20px;
-        row-gap: 15px;
+        padding: 27px;
     }
+
     .footer-nav {
-        gap: 20px;
-        margin-top: 0;
-    }
-    .footer-link h3 {
-        margin-left: 0;
-    }
-    .footer-img{
-        min-width: 306px;
-        min-height: 229px;
-        max-width: 476px;
-        max-height: 400px;
-    }
-    .footer-contacts{
-        margin-top: 30px;
+        gap: 17px;
         margin-bottom: 30px;
-        flex-wrap: wrap;
-        gap: 10px;
     }
-    .contact-type {
-        margin-left: 0;
-    }
-    .messengers-caption {
-        margin-left: 0;
-    }
-    .footer-actions {
-        margin-top: 0;
-        flex-wrap: wrap;
+
+}
+
+@media (max-width: 1180px) {
+    .footer__container {
+        padding: 30px 20px;
         gap: 20px;
     }
-    .privacy-policy h3 {
-        margin-left: 0;
-    }
-    .consult-button {
-        font-size: 16px;
-    }
-    .footer-actions {
-        gap: 10px;
-    }
-    .messenger-link img{
-        width: 42px;
-        height: 42px;
-        gap: 10px;
-    }
-}
-@media (max-width: 1045px) {
-    .contacts-info {
-        gap: 10px;
-   } 
-   .footer-nav {
-        max-width: 754px;
-        position: absolute;
-        gap: 25px;
-        left: 0;
-    }
-    .footer-img {
-        max-width: 306px;
-        max-height: 229px;
-        object-fit: cover;
-        border-radius: 20px;
-        margin-top: 50px;
-    }
-    .footer-contacts {
-        margin-top: 50px;
-        margin-bottom: 10px;
-    }
-    .consult-button {
-        padding: 15px 25px;
-    }
-}
-@media (max-width: 910px) {
-    .footer-img {
-        margin-top: 100px;
-    }
-    .footer-contacts {
-        margin-top: 100px;
-    }
-    .footer-logo {
-        order: 2;
-    } 
-    .footer-right {
-        order: 1;
-    }
-    .footer__container {
-        flex-wrap: wrap;
-    }
-}
-@media (max-width: 769px) {
+
     .footer-nav {
-        row-gap: 5px;
+        flex-direction: row;
+        align-items: flex-start;
+
     }
-    .contact-item-img {
-        max-width: 25px;
-        max-height: 25px;
+
+
+    .footer-actions {
+        flex-direction: column;
+        gap: 20px;
+        align-items: flex-start;
+    }
+
+    .consult-button {
+        margin-top: -55px;
+        margin-left: 20px;
+        width: 525px;
+    }
+
+    .messenger-link img {
+
+        transition: transform 0.3s;
     }
 }
-@media (max-width: 761px) {
-    
+
+@media (max-width: 1000px) {
     .footer__container {
-        row-gap: 15px;
+        padding: 30px 20px;
+        gap: 20px;
     }
+
+    .footer-nav {
+        flex-direction: row;
+        gap: 35px;
+        align-items: flex-start;
+        margin-right: 63px;
+
+    }
+
+    .consult-button {
+        margin-top: -55px;
+        margin-left: 20px;
+        width: 550px;
+    }
+
+    .logo-img {
+        width: 309px;
+        height: 431px;
+        margin-top: -20px;
+    }
+}
+
+@media (max-width: 960px) {
+
     .footer__container {
-        margin: 0 10px;
+        padding: 25px 10px;
+        gap: 20px;
+    }
+
+    .consult-button {
+        margin-top: -55px;
+        margin-left: 20px;
+        width: 440px;
+    }
+
+    .logo-img {
+        width: 347px;
+        height: 261px;
+        margin-top: 28px;
     }
 }
-@media (max-width: 630px) {
-    .footer-img {
-        margin-top: 0;
-        min-width: 362px;
-        max-height: 229px;
+@media (max-width: 768px) {
+    .logo-img {
+        width: 820px;
+        height: 337px;
+        margin-top: -20px;
     }
 }
-@media (max-width: 420px) {
-    .footer-img {
-        margin-top: 0;
-        min-width: auto;
-        max-height: 229px;
+@media (max-width: 768px) {
+    .footer__container {
+        padding: 25px 10px;
+        gap: 20px;
     }
-}
-@media (max-width: 300px) {
+
+    .footer-content {
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    .footer-logo {
+        flex: 1;
+        max-width: 200px;
+    }
+
+    .footer-nav {
+        gap: 10px;
+        margin-bottom: 30px;
+        justify-content: space-around;
+        margin-right: 0px;
+    }
+
     .footer-contacts {
-        margin-top: 140px;
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    .messengers-block {
+        text-align: left;
+    }
+
+    .messengers-list {
+        justify-content: flex-start;
+    }
+
+    .footer-actions {
+        flex-direction: column;
+        gap: 20px;
+        align-items: flex-start;
+    }
+
+    .logo-img {
+        width: 820px;
+        height: 337px;
+        margin-top: -20px;
+    }
+
+    .consult-button {
+        margin-top: -55px;
+        margin-left: 20px;
+        width: 525px;
     }
 }
+
+@media (max-width: 540px) {
+    .consult-button {
+        margin-top: -55px;
+        margin-left: 20px;
+        width: 525px;
+    }
+}
+
+@media (max-width: 480px) {
+
+    .footer__container {
+        padding: 25px 10px;
+        gap: 20px;
+    }
+
+    .footer-link {
+        font-size: 15px;
+    }
+
+    .contact-text {
+        font-size: 15px;
+    }
+
+    .consult-btn {
+        padding: 10px 15px;
+        font-size: 14px;
+
+
+    }
+
+    .consult-button {
+        margin-top: -55px;
+        margin-left: 20px;
+        width: 360px;
+    }
+
+    .privacy-policy {
+        margin-left: 10px;
+    }
+
+    .logo-img {
+        width: 357px;
+        height: 337px;
+        margin-top: -20px;
+    }
+
+    .footer-nav {
+        flex-direction: row;
+        gap: 30px;
+        align-items: flex-start;
+    }
+}
+
+@media (max-width: 420px) {
+    .footer__container {
+        padding: 25px 10px;
+        gap: 20px;
+    }
+
+    .footer-nav {
+        flex-direction: row;
+        gap: 25px;
+        align-items: flex-start;
+    }
+}
+
+@media (max-width: 360px) {
+    .footer__container {
+        padding: 25px 10px;
+        gap: 20px;
+    }
+
+    .consult-button {
+        margin-top: -55px;
+        margin-left: 10px;
+        width: 331px;
+    }
+
+    .logo-img {
+        width: 295px;
+        height: 337px;
+        margin-top: -20px;
+    }
+
+    .footer-nav {
+        flex-direction: row;
+        gap: 17px;
+        align-items: flex-start;
+    }
+}
+
